syntax = "proto3";
package lastmile.rider;
option java_package = "lastmile.rider";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto"; // common.proto removed (unused)

service RiderService {
  rpc RegisterRideIntent(RegisterRideIntentRequest) returns (RideIntentResponse);
  rpc GetRideStatus(RideId) returns (RideStatus);
  rpc GetRideHistory(GetRideHistoryRequest) returns (RideHistoryResponse);
}

message RegisterRideIntentRequest {
  string user_id = 1;
  string station_area_id = 2;
  google.protobuf.Timestamp arrival_time = 3;
  string destination_area_id = 4;
  int32 party_size = 5;
}
message RideIntentResponse { string intent_id = 1; }
message RideId { string id = 1; }
message RideStatus {
  enum Status { PENDING=0; SCHEDULED=1; PICKED_UP=2; COMPLETED=3; CANCELLED=4; }
  string intent_id = 1;
  Status status = 2;
  string trip_id = 3;
  string destination_area_id = 4;
  string station_area_id = 5;
  google.protobuf.Timestamp arrival_time = 6;
}

message GetRideHistoryRequest {
  string user_id = 1;
}

message RideHistoryResponse {
  repeated RideStatus rides = 1;
}